--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
       "last 1 safari version"
     ]
   },
-
+  "proxy": "http://localhost:3001",
   "devDependencies": {
     "file-loader": "^6.2.0",
     "jasmine": "^4.2.0",
