--- a/package.json
+++ b/package.json
@@ -23,16 +23,16 @@
     "morgan": "^1.10.0",
     "react": "^18.1.0",
     "react-bootstrap": "^2.4.0",
-    "react-dom": "^^16.13.0",
+    "react-dom": "^18.1.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "serve-favicon": "^2.5.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "node --max_old_space_size=2560 node_modules/.bin/react-scripts start",
-    "build": "node --max_old_space_size=2560 node_modules/.bin/react-scripts build",
-    "test": "jasmine",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -56,7 +56,6 @@
   "proxy": "http://localhost:3001",
   "devDependencies": {
     "file-loader": "^6.2.0",
-    "jasmine": "^4.2.0",
     "svg-url-loader": "^7.1.1"
   }
 }
