--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "jasmine",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -56,6 +56,7 @@
   "proxy": "http://localhost:3001",
   "devDependencies": {
     "file-loader": "^6.2.0",
+    "jasmine": "^4.2.0",
     "svg-url-loader": "^7.1.1"
   }
 }
