--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "code-room",
   "version": "0.1.0",
   "private": true,
+  "homepage": "./",
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.1.1",
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
