--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "dev": "webpack serve",
+    "buildpack": "webpack",
     "test": "jasmine",
     "eject": "react-scripts eject"
   },
@@ -57,8 +59,16 @@
   },
   "proxy": "http://localhost:3001",
   "devDependencies": {
+    "@babel/core": "^7.20.5",
+    "@babel/preset-env": "^7.20.2",
+    "@babel/preset-react": "^7.18.6",
+    "babel-loader": "^9.1.0",
     "file-loader": "^6.2.0",
+    "html-webpack-plugin": "^5.5.0",
     "jasmine": "^4.2.0",
-    "svg-url-loader": "^7.1.1"
+    "svg-url-loader": "^7.1.1",
+    "webpack": "^5.75.0",
+    "webpack-cli": "^5.0.1",
+    "webpack-dev-server": "^4.11.1"
   }
 }
