--- a/package.json
+++ b/package.json
@@ -10,18 +10,23 @@
     "@fortawesome/free-regular-svg-icons": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/react-fontawesome": "^0.1.18",
+    "@leecheuk/react-google-login": "^5.4.1",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "@uiw/react-textarea-code-editor": "^2.0.2",
     "bcrypt": "^5.0.1",
     "bootstrap": "^5.1.3",
+    "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.1",
+    "express-session": "^1.17.3",
     "font-awesome": "^4.7.0",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.3",
     "mongoose": "^6.3.8",
     "morgan": "^1.10.0",
+    "passport": "^0.6.0",
+    "passport-google-oauth": "^2.0.0",
     "react": "^18.1.0",
     "react-bootstrap": "^2.4.0",
     "react-dom": "^18.1.0",
