--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "@babel/core": "^7.20.5",
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-react": "^7.18.6",
+    "@wixc3/react-board": "^2.1.3",
     "babel-loader": "^9.1.0",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
