--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "@uiw/react-textarea-code-editor": "^2.0.2",
+    "axios": "^1.3.4",
     "bcrypt": "^5.0.1",
     "bootstrap": "^5.1.3",
     "cookie-parser": "^1.4.6",
@@ -27,6 +28,7 @@
     "morgan": "^1.10.0",
     "passport": "^0.6.0",
     "passport-google-oauth": "^2.0.0",
+    "passport-local": "^1.0.0",
     "react": "^18.1.0",
     "react-bootstrap": "^2.4.0",
     "react-dom": "^18.1.0",
